my first portfolio site

--- a/index.html
+++ b/index.html
@@ -1,19 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS-Grid</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Nasozi Jazirah</title>
+    <link rel="stylesheet" href="exercise.css">
 </head>
+
 <body>
-    <div class="grid-container">
-        <div class="grid-item header">Header</div>
-        <div class="grid-item nav">Nav</div>
-        <div class="grid-item content">Content</div>
-        <div class="grid-item sidebar">Sidebar</div>
-        <!-- <div class="grid-item item-5">Ads</div> -->
-        <div class="grid-item footer">Footer</div>
+    <section class="hero">
+        <div class="overlay">
+            <div class="content">
+    <div class="tagline"></div>
+    <section class="slide container">
+        <h2>Hello I'm Nasozi Jazirah, a CodeQueen</h2>
+        <p>This is one of the first cards I designed using HTML & CSS. It represents my tech journey so far!</p>
+        <img src="mycard.png" alt="Nasozi Jazirah Profile card">
+    </section>
+    <div class="tagline"></div>
+    <section class="resources container">
+        <h2>Resources That Empowered Me</h2>
+        <div class="resource-columns">
+            <div>
+                <h4>Courses & Platforms</h4>
+                <ul>
+                    <li>CodeQueen - Bootcamp</li>
+                    <li>Strathmore University - Digital Entreprenuership</li>
+                    <li>HP LIFE - Bussiness Communications</li>
+                    <li>Educate - Bussiness Skills & Ideas</li>
+                </ul>
+            </div>
+            <div>
+                <h4>Institutions</h4>
+                <ul>
+                    <li>UICT Nakawa - Information Technology for Business</li>
+                    <li>Kids Villa Junior School - Teaching Experience</li>
+                    <li>Airtel Uganda - Customer Sales Representative</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <div class="tagline"></div>
+    <section class="journey container">
+        <h2>My Journey into Tech</h2>
+        <p>From my early days teaching at Kids Villa Junior School to gaining business communication skills through HP
+            LIFE, every experience has fueled my passion for technology.</p>
+        <p>I later joined Strathmore University's Digital Entreprenuership program, earned a Gold Certificate from
+            Educate!, and enrolled at UICT Nakawa to persue a Diploma in Information Technology for Business.</p>
+        <p>With each milestone - whether working at Airtel as a Customer Sales Representative or designing my first
+            HTML/CSS profile card - I continue to grow and inspire.</p>
+            <p>CodeQueen has opened my eyes to the world of technology. Through every session, I've grown from a beginner to a confident learner, building real projects and discovering my passion for digital skills. It's more than just code-it's about courage, creativity, and community. </p>
+    </section>
+    <section class="portfolio container">
+        <h2>What This Portfolio Is About</h2>
+        <hr style="width: 60px; height: 3px; background-color: rgb(33, 6, 94); border: none; margin: 10px auto;">
+    <p>This portfolio is a collection of my learning journey, skills, and digital projects.
+        It Show cases who I am, what I've learned through platforms like Codequeen. <br>
+        From building simple web pages using HTML and CSS to discovering my purpose in tech, this is my personal space to reflect, share, and grow.
+    </p>
+    </section>
     </div>
+        </div>
+    </section>
 </body>
+
 </html>
